plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'quantum'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'net.openhft:chronicle-map:3.21ea1'
    implementation 'net.openhft:chronicle-queue:5.24ea6'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
    jvmArgs '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
    jvmArgs '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED'
    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
    jvmArgs '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
    jvmArgs '--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'
    jvmArgs '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
}

tasks.named('bootRun') {
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
    jvmArgs '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
    jvmArgs '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED'
    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
    jvmArgs '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
    jvmArgs '--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'
    jvmArgs '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
}
